<resources>
    <string name="app_name">Kayla</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Repassword">Re-Password</string>
    <string name="Blog">Blog</string>
    <string name="Search">Search</string>
    <string name="RedOveralls">Red Overalls</string>
    <string name="PinkFurCoat">Pink Fur Coat</string>
    <string name="Successfull">You have saccessfully</string>

    <string name="Complete">completed your payment procedure </string>
    <string name="Order">Order Number :</string>
    <string name="DemoText">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected humour or randomised words which dont look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isnt anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures to generate Lorem Ipsum which looks reasonable</string>
    <string name="Dummy">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="Key"></string>
</resources>