<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity.SignupActivity">


    <RelativeLayout
        android:id="@+id/relativep"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/cnbold"
            android:gravity="center"
            android:text="KAYLA"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_below="@+id/relativep"
                android:layout_height="550dp"

                android:layout_marginTop="5dp"
                android:background="@drawable/cornerbg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/cnbold"
                    android:text="Signup"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/cnbold"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etname"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/name"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/cnbold"
                    android:hint="@string/app_name"
                    android:paddingStart="10dp"
                    android:singleLine="true" />


                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etname"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/cnbold"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etemail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/email"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/cnbold"
                    android:hint="@string/email"
                    android:textSize="14sp"
                    android:paddingStart="10dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etemail"
                   android:layout_marginLeft="20dp"
                    android:fontFamily="@font/cnbold"
                    android:text="Password"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etpass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/pass"
                  android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/passshape"
                    android:fontFamily="@font/cnbold"
                    android:hint="@string/password"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/repass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etpass"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/cnbold"
                    android:text="Re-Password"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/pass"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/eye" />

                <EditText
                    android:id="@+id/etrepass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/repass"
                   android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/passshape"
                    android:fontFamily="@font/cnbold"
                    android:hint="@string/Repassword"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:singleLine="true" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/repass"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/eyepass" />

                <RelativeLayout
                    android:id="@+id/relativelogin"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_below="@+id/etrepass">

                    <!--<TextView
                        android:id="@+id/signupbtn"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"

                        android:gravity="center"
                        android:text="Signup "
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:fontFamily="@font/cnbold"
                        android:textSize="15sp"
                        android:textStyle="bold" />-->
                    <com.karacce.buttom.Buttom
                        android:id="@+id/btnsign"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="Signup"
                        android:textColor="#FFFFFF"
                        app:buttom_corner_radius="12dp"
                        app:buttom_gradient_end_color="#6691F0"
                        app:buttom_gradient_orientation="right_left"
                        app:buttom_gradient_start_color="#64B5FF"
                        app:buttom_gradient_type="linear"
                        app:buttom_type="gradient" />

                    <TextView
                        android:id="@+id/social_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btnsign"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/cnbold"
                        android:text="Signup with Social"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lineargoogle"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_below="@+id/relalready"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="80dp"
                        android:layout_weight="1"
                        android:src="@drawable/google" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_marginRight="80dp"
                        android:layout_weight="1"
                        android:src="@drawable/twitter" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/relalready"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativelogin"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/cnbold"
                        android:text="Already have an account ?" />

                    <TextView
                        android:id="@+id/txt_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/account"
                        android:fontFamily="@font/cnbold"
                        android:text="Sign In"
                        android:textColor="@color/black" />

                </RelativeLayout>

            </RelativeLayout>
    <!--<ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progressbar">
    </ProgressBar>-->
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progressbar_br">
    </ProgressBar>

</RelativeLayout>